--- a/styles/editor.css
+++ b/styles/editor.css
@@ -19,7 +19,7 @@ html, body {
     position: fixed;
     top: 0;
     left: 0;
-    height: 100%;
+    height: 80%;
     padding: 1em;
     font-family: 'Roboto Mono', monospace;
     border: 0;
@@ -29,10 +29,11 @@ html, body {
 
 .preview {
     margin-left: 50%;
-    min-height: 100%;
+    max-height: 80%;
     padding: 0 1em;
     font: Helvetica, Arial, nimbussansl, liberationsans, freesans, clean, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     color: #333;
+    overflow: scroll;
 }
 
 .editor, .preview {
